@@ -61,6 +61,7 @@
     <script src="scripts/services/nodeinfo.js"></script>
 
     <script src="scripts/controllers/common.js"></script>
+    <script src="scripts/controllers/feed.js"></script>
     <script src="scripts/controllers/tutorial.js"></script>
     <script src="scripts/controllers/overview.js"></script>
     <script src="scripts/controllers/console.js"></script>
